fix layout bug on resources contact and search pages

--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -1,3 +1,15 @@
+body#Resources {
+  position: initial;
+}
+
+body#Contact {
+  position: initial;
+}
+
+body#Search {
+  position: initial;
+}
+
 .title-padder {
   padding: $title-padding;
 }
